--- a/ABOUT US/about.html
+++ b/ABOUT US/about.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header>
-        <a href="#" class="brand">Travel</a>
+        <a href="#" class="brand">Easy ✈Travel</a>
         <div class="menu-btn"></div>
         <div class="navigation">
             <div class="navigation-items">
-                <a href="./PAGE.html">Home</a>
-                <a href="../LOGIN/LOG.html">Log in</a>
-                <a href="../media1/shocard.html">Explore</a>
-                <a href="#">About us</a>
-                <a href="#">Contact</a>
+                <a href="../MAIN PAGE/PAGE.html">Home</a>
+                <a href="../LOGIN/">Log in</a>
+                <a href="../OUR OFFERS/shocard.html">Explore</a>
+                <a href="../ABOUT US/about.html">About us</a>
+                <a href="../CONTACT US/contact.html">Contact us</a>
 
             </div>
         </div>
